force-app/main/default/objects/NF_Contact_Tiles__mdt/NF_Contact_Tiles__mdt.object-meta.xml
<CustomObject>
    <description>This is used to control the tiles that are display in the community.


Example of the Tiles content. Ideally try to use the slds classes

&lt;div class=&quot;slds-grid slds-grid_vertical&quot;&gt;
        &lt;div style=&quot;font-weight:700;&quot; class=&quot;slds-text-heading_medium slds-col&quot;&gt;
              Call
        &lt;/div&gt;
        &lt;div class=&quot;slds-col slds-p-top_large&quot;&gt;
             Call Us: 123.123.1234
         &lt;/div&gt;
&lt;/div&gt;</description>
    <label>Tile Component Setting</label>
    <pluralLabel>Tile Component Settings</pluralLabel>
</CustomObject>