force-app/main/default/objects/NF_Contact_Tiles__mdt/fields/ComponentKey__c.field-meta.xml
<CustomField>
    <fullName>ComponentKey__c</fullName>
    <description>This is the component Key that is set on the community builder. There is a design attribute for this key.</description>
    <inlineHelpText>This is the component Key that is set on the community builder. There is a design attribute for this key.</inlineHelpText>
    <label>Component Key</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>