force-app/main/default/objects/NF_Contact_Tiles__mdt/fields/LinkToOpen__c.field-meta.xml
<CustomField>
    <fullName>LinkToOpen__c</fullName>
    <description>This is the link that the tile should open.</description>
    <inlineHelpText>This is the link that the tile should open.</inlineHelpText>
    <label>Link to open</label>
    <length>255</length>
    <type>Text</type>
</CustomField>