force-app/main/default/objects/NF_Contact_Tiles__mdt/listViews/View_All.listView-meta.xml
<ListView>
    <fullName>View_All</fullName>
    <columns>ComponentKey__c</columns>
    <columns>Action__c</columns>
    <columns>SortOrder__c</columns>
    <columns>ButtonClass__c</columns>
    <columns>LinkToOpen__c</columns>
    <columns>HTML_Content__c</columns>
    <columns>MasterLabel</columns>
    <filterScope>Everything</filterScope>
    <label>View All</label>
</ListView>